deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hosting
  labels:
    app.kubernetes.io/part-of: farutech
